# agentic_rag

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/api/: .dockerignore  Dockerfile  api.py  requirements.txt
apps/non_rag/: Dockerfile  api.py  requirements.txt
chroma_langchain_db/738dfb56-9c7f-44ef-855a-fef3663bda07/: index_metadata.pickle
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/api/: llm.jsx
frontend/src/components/: AssistantMessage.jsx  ChatBox.jsx  InputBar.jsx  MessageFeed.jsx  RagToggle.jsx  Sidebar.jsx  Sources.jsx
frontend/src/views/: Home.jsx
memory/: MEMORY.md  project_personal.md
src/sandbox/: semantic_search_engine.py
